# RAG-experiments

./: .dockerignore  .env.template  .gitignore  README.md  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.ollama.yml  docker-compose.override.yml  docker-compose.yml  makefile  makefile.md  todo
.github/workflows/: ci.yml  docker-build-push.yml
charts/rag-app/: .helmignore  Chart.yaml  values.example.yaml  values.yaml
charts/rag-app/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  frontend-deployment.yaml  frontend-service.yaml  hpa.yaml  httproute.yaml  ingress.yaml  init-db-job.yaml  litellm-configmap.yaml  litellm-deployment.yaml  litellm-secret.yaml  litellm-service.yaml  llm-gateway-deployment.yaml  llm-gateway-service.yaml  rag-core-pvc.yaml  rag-worker-deployment.yaml  secret.yaml  service.yaml  serviceaccount.yaml
charts/rag-app/templates/tests/: test-connection.yaml
data/: README.md
deployments/grafana/dashboards/: llm_dashboard.json  rag_dashboard.json
deployments/grafana/provisioning/dashboards/: dashboard.yaml
deployments/grafana/provisioning/datasources/: datasources.yaml
deployments/litellm_proxy/: litellm_config.yaml
deployments/nginx/: nginx.conf
deployments/postgres/: init-exporter-permissions.sh
deployments/prometheus/: prometheus.yml
scripts/: bootstrap.py  bootstrap.sh  requirements.txt
src/api/: Dockerfile  main.py
src/cli/: Dockerfile  main.py  pyproject.toml  requirements.txt
src/evaluation-runner/: Dockerfile  config.py  evaluate.py  main.py  metrics.py  pyproject.toml
src/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/frontend/src/: App.tsx  index.css  types.ts
src/frontend/src/components/chat/: CitationTooltip.tsx  MessageBubble.tsx  ThinkingBubble.tsx
src/frontend/src/components/documents/: DocumentSidebar.tsx
src/frontend/src/components/layout/: Layout.tsx  Sidebar.tsx
src/frontend/src/components/ui/: CustomSelect.tsx
src/frontend/src/context/: AuthContext.ts  AuthProvider.tsx  ThemeContext.ts  ThemeProvider.tsx
src/frontend/src/hooks/: useAuth.ts  useChat.ts  useDocuments.ts  useSettings.ts
src/frontend/src/pages/: ChatPage.tsx  InfoPage.tsx  LoginPage.tsx  SettingsPage.tsx
src/llm-gateway/: Dockerfile  main.py  pyproject.toml
src/llm_gateway/: Dockerfile  main.py  pyproject.toml  requirements.txt
src/local-llm/: Dockerfile
src/rag-core/: Dockerfile  config.py  ingestion.py  ingestion_utils.py  main.py  metrics.py  models.py  pyproject.toml  retriever.py  utils.py
src/rag-core/api/: deps.py
src/rag-core/api/routers/: auth.py  chat.py  documents.py  history.py  service.py
src/rag-core/core/: config.py  models.py  security.py
src/rag-core/database/: crud.py  database.py  models.py  schemas.py
src/rag-core/prompts/: query_expansion.yaml  system.json  system.yaml
src/rag-core/rag/: ingestion.py  ingestion_utils.py  retriever.py  retriever_utils.py  tasks.py
src/rag-core/schemas/: message_schemas.py  service_schemas.py  user_schemas.py
src/rag-core/utils/: celery_app.py  utils.py
src/rag_core/: Dockerfile  config.py  ingestion.py  main.py  models.py  push_metrics.py  pyproject.toml  requirements.txt  retriever.py  utils.py
src/rag_core/prompts/: multi_query.json  query_expansion.json  system.json
src/streamlit-ui/: Dockerfile  app.py  pyproject.toml
src/streamlit_ui/: Dockerfile  app.py  pyproject.toml  requirements.txt
