[project]
name = "llm-gateway"
version = "0.1.0"
description = "Manages interactions with LLMs, powered by LiteLLM proxy."
authors = [{ name = "Kilyan"}]
requires-python = ">=3.12"
dependencies = [
 # API Framework
    "httpx==0.28.1",
    "fastapi==0.118.0",
    "uvicorn==0.37.0",
]

[project.optional-dependencies]
dev = [
    # Testing and Linting
    "pytest==8.4.2",
    "black==25.9.0",
    "ruff==0.14.1",
]

[tool.black]
line-length = 170

[tool.ruff]
line-length = 170

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
]