[project]
name = "streamlit-ui"
version = "0.1.0"
description = "UI with streamlit to use the project."
authors = [{ name = "Kilyan"}]
requires-python = ">=3.12"
dependencies = [
    "streamlit==1.51.0",
    "requests==2.32.5",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "black==25.9.0",
    "ruff==0.14.1",
]

[tool.black]
line-length = 170

[tool.ruff]
line-length = 170

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
]